fix: increase spacing below admin dashboard title

--- a/client/src/layouts/AdminLayout/AdminLayout.module.scss
+++ b/client/src/layouts/AdminLayout/AdminLayout.module.scss
@@ -27,7 +27,7 @@
 
 .pageHeading {
   display: grid;
-  gap: 0.2rem;
+  gap: 15px;
 
   h1 {
     color: #c9a45c;
